Fixed `text-align` in for `.cat-title`.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -263,7 +263,7 @@ body {
     font-weight: 500;
     font-size: 52px;
     line-height: 52px;
-    text-align: vertical;
+    text-align: center;
     center-align: center;
 }
 .rating-list {
